Bug 1852153 - Don't log in GetTopLevelWindow. r=stransky

Now we call this more often it becomes very noisy.

Differential Revision: https://phabricator.services.mozilla.com/D187799